[package]
name = "thinsexp"
description = "Another sexp parser, this time with the variation of being composed of string refs over the input string, and lacking special list types for floats and ints."
version = "0.1.0"
authors = ["mako <marcus.yass@gmail.com>"]

[dependencies]
#string_cache = "0.7.0"
ref_slice = "1.1.1"